[metadata]
name = glue-yt
author = Nathan Goldbaum, John ZuHone, Anna Rosen, Thomas Robitaille
author_email = thomas.robitaille@gmail.com
url = https://github.com/glue-viz/glue-yt
description = Glue yt loader plugin
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy
    glue-core>=0.15
    yt>=3.5.1
    qtpy

[options.package_data]
glue_wwt.toolbar = *.ui

[options.entry_points]
glue.plugins =
    yt = glue_yt:setup

[options.extras_require]
test =
    pytest
    pytest-cov
    mock
qt =
    PyQt5;python_version>="3"
